--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "cheerio": "^1.0.0-rc.2",
     "cherio": "^1.0.0-rc.2",
     "electron": "^3.0.10",
+    "jquery": "^3.3.1",
     "needle": "^2.2.4",
+    "nouislider": "^12.1.0",
+    "popper.js": "^1.14.5",
     "querystring": "^0.2.0",
     "request": "git+https://github.com/request/request.git",
     "request-cookies": "^1.1.0",
