--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Joe Scott",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.3",
@@ -19,7 +19,9 @@
     "needle": "^2.2.4",
     "nouislider": "^12.1.0",
     "popper.js": "^1.14.5",
+    "puppeteer": "^1.10.0",
     "querystring": "^0.2.0",
+    "react-table": "^6.8.6",
     "request-cookies": "^1.1.0",
     "request-promise": "^4.2.2",
     "supreme-api": "^1.0.6",
