--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   "author": "Joe Scott",
   "license": "ISC",
   "dependencies": {
+    "ag-grid": "^18.1.2",
+    "ag-grid-electron": "^9.1.10",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "cheerio": "^1.0.0-rc.2",
     "cherio": "^1.0.0-rc.2",
     "electron": "^3.0.10",
+    "fancygrid": "^1.7.54",
     "jquery": "^3.3.1",
+    "namor": "^1.1.1",
     "needle": "^2.2.4",
     "nouislider": "^12.1.0",
     "popper.js": "^1.14.5",
     "puppeteer": "^1.10.0",
     "querystring": "^0.2.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-table": "^6.8.6",
     "request-cookies": "^1.1.0",
     "request-promise": "^4.2.2",
