--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "test": "node test.js"
   },
   "author": "Joe Scott",
   "license": "ISC",
