--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "scripts": {
     "start": "electron .",
-
     "test": "node test.js"
   },
   "author": "Joe Scott",
@@ -26,6 +25,7 @@
     "popper.js": "^1.14.5",
     "puppeteer": "^1.10.0",
     "querystring": "^0.2.0",
+    "queue": "^4.5.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-table": "^6.8.6",
