--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "cherio": "^1.0.0-rc.2",
     "electron": "^3.0.10",
     "fancygrid": "^1.7.54",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "namor": "^1.1.1",
     "needle": "^2.2.4",
+    "node-fetch": "^2.3.0",
     "nouislider": "^12.1.0",
     "p-queue": "^3.0.0",
     "popper.js": "^1.14.5",
-    "puppeteer": "^1.10.0",
+    "puppeteer": "^1.14.0",
+    "puppeteer-extra": "^2.1.3",
+    "puppeteer-extra-plugin-stealth": "^2.2.2",
     "querystring": "^0.2.0",
     "queue": "^4.5.1",
     "react": "^16.6.3",
@@ -36,6 +39,7 @@
     "request-promise": "^4.2.2",
     "supreme-api": "^1.0.6",
     "tough-cookie": "^2.5.0",
-    "tough-cookie-filestore": "0.0.1"
+    "tough-cookie-filestore": "0.0.1",
+    "user-agents": "^1.0.236"
   }
 }
